# oceanbase_mcp_server

./: README.md  SECURITY.md  pyproject.toml  pytest.ini
.github/workflows/: test.yml
src/oceanbase_mcp_server/: __init__.py  ob_install.py  ob_install_function.py  server.py  server2.py
tests/: conftest.py  test_server.py
